--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.1",
         "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.10",
         "spatie/laravel-permission": "^5.7"
     },
     "require-dev": {
