--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -11,12 +11,11 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_pass app:9000;  # Updated to use the service name instead of the container name
+        fastcgi_index index.php;
     }
 
     location ~ /\.ht {
