--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.1",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.10",
-        "spatie/laravel-permission": "^5.7"
+        "spatie/laravel-permission": "^5.7",
+        "srmklive/paypal": "~3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
