--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     volumes:
       - .:/var/www/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/client_max_body_size.conf:/etc/nginx/conf.d/client_max_body_size.conf
     ports:
       - "8080:80"
     networks:
