--- a/docker/nginx/client_max_body_size.conf
+++ b/docker/nginx/client_max_body_size.conf
@@ -1,3 +1,8 @@
-http {
-    client_max_body_size 20M;  # Adjust the value according to your requirements
+server {
+    listen 80;
+    server_name localhost;
+
+    client_max_body_size 20M;
+
+    # The rest of your server configuration goes here
 }
