--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,13 +1,18 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost;
+    server_name ecc-church.com;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/html/public;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
+        proxy_pass http://app:9000;  # Use the service name defined in docker-compose and the internal port
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location ~ \.php$ {
